[gd_scene load_steps=9 format=3 uid="uid://cdiesn1utq8vv"]

[ext_resource type="Texture2D" uid="uid://dcfkiv764iaqk" path="res://Assets/Images/Objects/Misc/PlaceHolder1-1.png" id="1_e26f8"]
[ext_resource type="Script" path="res://Scripts/ObjectScripts/SteamPipeManager.gd" id="1_vgh0u"]
[ext_resource type="Texture2D" uid="uid://failsjwtufog" path="res://Assets/Images/Objects/Misc/FireParticle1.png" id="2_wvnc5"]
[ext_resource type="AudioStream" uid="uid://jnpbkyjdck87" path="res://Assets/Audio/SFX/SteamPipeSpraySFX.wav" id="4_by5c8"]

[sub_resource type="Gradient" id="Gradient_7qaxc"]
offsets = PackedFloat32Array(0, 0.647059, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.0823529, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yt5du"]
gradient = SubResource("Gradient_7qaxc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0c16a"]
particle_flag_disable_z = true
particle_flag_damping_as_friction = true
angle_min = -720.0
angle_max = 720.0
direction = Vector3(0, -1, 0)
spread = 50.0
flatness = 0.661
initial_velocity_min = 300.0
initial_velocity_max = 300.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
gravity = Vector3(0, -10, 0)
damping_min = 0.54
damping_max = 0.54
color_ramp = SubResource("GradientTexture1D_yt5du")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqto4"]
size = Vector2(20, 64)

[node name="SteamPipe" type="Node2D"]
script = ExtResource("1_vgh0u")

[node name="SteamPipeSprite" type="Sprite2D" parent="."]
scale = Vector2(0.25, 1)
texture = ExtResource("1_e26f8")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = 60
position = Vector2(0, -16)
emitting = false
amount = 1000
process_material = SubResource("ParticleProcessMaterial_0c16a")
texture = ExtResource("2_wvnc5")
one_shot = true

[node name="PlayerBoostArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBoostArea"]
position = Vector2(0, -48)
shape = SubResource("RectangleShape2D_hqto4")
disabled = true

[node name="SteamEmissionTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="StartWaitTime" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="BoostAreaDisablerTimer" type="Timer" parent="."]
one_shot = true

[node name="SteamSparySFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_by5c8")
max_distance = 300.0
panning_strength = 2.0

[connection signal="timeout" from="SteamEmissionTimer" to="." method="_on_steam_emission_timer_timeout"]
[connection signal="timeout" from="StartWaitTime" to="." method="_on_start_wait_time_timeout"]
[connection signal="timeout" from="BoostAreaDisablerTimer" to="." method="_on_boost_area_disabler_timer_timeout"]
